--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:exported="true"
+        android:hardwareAccelerated="true"
+        android:windowSoftInputMode="adjustResize"
+        android:configChanges="keyboardHidden|orientation|screenSize"
         android:theme="@style/AppTheme">
 
         <activity android:name=".activities.HomeActivity">
