--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
+    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.squareup:otto:1.3.5'
+    compile 'org.mongodb:bson:3.0.3'
     compile project(':sublimepickerlibrary')
 }
