--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.squareup:otto:1.3.5'
     compile 'org.mongodb:bson:3.0.3'
+    compile 'com.android.support:design:23.3.0'
     compile project(':sublimepickerlibrary')
 }
