--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.5'
     compile 'org.mongodb:bson:3.0.3'
     compile 'com.android.support:design:23.3.0'
+    compile 'com.sun.mail:android-mail:1.5.5'
+    compile 'com.sun.mail:android-activation:1.5.5'
     compile project(':sublimepickerlibrary')
 }
