--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,34 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'drchipalias'
+            keyPassword 'drchip123'
+            storeFile file('C:/AndroidSamples/Arun/Android_Proj/Android/app/keys/drchipkey.jks')
+            storePassword 'drchip123'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "com.drchip.android"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        signingConfig signingConfigs.release
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.release
+        }
+    }
+    productFlavors {
     }
 }
 
