keystore file, changes on UI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'com.sun.mail:android-mail:1.5.5'
     compile 'com.sun.mail:android-activation:1.5.5'
     compile project(':sublimepickerlibrary')
+    compile 'com.nineoldandroids:library:2.4.0'
 }
